--- a/.gitignore
+++ b/.gitignore
@@ -397,7 +397,7 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 
-Задача № 1.csproj
+/Знакомство с C#/Семинар 13.06/Задача № 1.csproj
 Задача № 2.csproj
 Задача № 3.csproj
 Задача № 4.csproj
