Игнорирование папки Семинар 13.06

--- a/.gitignore
+++ b/.gitignore
@@ -398,6 +398,4 @@ FodyWeavers.xsd
 *.sln.iml
 
 /Знакомство с C#/Семинар 13.06/Задача № 1.csproj
-Задача № 2.csproj
-Задача № 3.csproj
-Задача № 4.csproj
+/Знакомство с C#/Семинар 13.06/
