--- a/.gitignore
+++ b/.gitignore
@@ -407,7 +407,7 @@ FodyWeavers.xsd
 Семинар*
 /Буткемп
 /Знакомство с базами данных (семинары)
-/folder
+/python/folder
 main.py
 pyvenv.cfg
-/lib/python3.11/site-packages
+/lib/python3.11/site-packages/
