--- a/.gitignore
+++ b/.gitignore
@@ -411,4 +411,4 @@ FodyWeavers.xsd
 main.py
 pyvenv.cfg
 /python/lib/
-/Знакомство с C#/Итоговая контрольная/
+Знакомство с C#/Итоговая контрольная/
