--- a/.gitignore
+++ b/.gitignore
@@ -413,4 +413,4 @@ pyvenv.cfg
 /python/lib/
 Знакомство с C#/Итоговая контрольная/
 itogovaya_kontrolnaya_rabota_ci_sharp/
-Итоговая контрольная
+/Итоговая контрольная
