--- a/.gitignore
+++ b/.gitignore
@@ -414,3 +414,4 @@ pyvenv.cfg
 Знакомство с C#/Итоговая контрольная/
 itogovaya_kontrolnaya_rabota_ci_sharp/
 Итоговая контрольная*
+/Знакомство с C#/Итоговая контрольная/
