--- a/.gitignore
+++ b/.gitignore
@@ -415,3 +415,5 @@ pyvenv.cfg
 itogovaya_kontrolnaya_rabota_ci_sharp/
 Итоговая контрольная*
 /Знакомство с C#/Итоговая контрольная/
+main*
+README*
