Выполнил ДЗ № 3 по знакомству с веб-технологиями

--- a/.gitignore
+++ b/.gitignore
@@ -419,3 +419,6 @@ main*
 README*
 !/python/Seminar_8/README.md
 !/python/Seminar_8/main.py
+Task 44.py
+!/Знакомство с веб-технологиями/ДЗ № 3/main.js
+/Знакомство с Java/program.Java
