Удалил файлы Cat.java и Sem6.java из репозитория

--- a/.gitignore
+++ b/.gitignore
@@ -444,3 +444,6 @@ FamilyTree.iml
 /Знакомство с Java/FamilyTree/out/
 /FamilyTree/writer/tree.txt
 tree.txt
+/Знакомство с Java/Cat.java
+/Знакомство с Java/Sen6.java
+Cat.java
