--- a/.gitignore
+++ b/.gitignore
@@ -445,5 +445,6 @@ FamilyTree.iml
 /FamilyTree/writer/tree.txt
 tree.txt
 /Знакомство с Java/Cat.java
-/Знакомство с Java/Sen6.java
+/Знакомство с Java/Sem6.java
 Cat.java
+Sem6.java
